{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 57,
  "lineage": "8371f212-b600-4c24-bb05-a362ce9a1738",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:internet-gateway/igw-0a9252851b981e4ec",
            "id": "igw-0a9252851b981e4ec",
            "owner_id": "844479805149",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-igw",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:route-table/rtb-07e33325d60b0b87a",
            "id": "rtb-07e33325d60b0b87a",
            "owner_id": "844479805149",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-route-table",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:route-table/rtb-095fcc3d4a059ca86",
            "id": "rtb-095fcc3d4a059ca86",
            "owner_id": "844479805149",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9252851b981e4ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-public-route-table",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dabc5cb8a22daa3f",
            "region": "ap-south-1",
            "route_table_id": "rtb-07e33325d60b0b87a",
            "subnet_id": "subnet-0cbbda42e101ee70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c971f4d092ac6b22",
            "region": "ap-south-1",
            "route_table_id": "rtb-07e33325d60b0b87a",
            "subnet_id": "subnet-09bdc80f586ee652c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08062d2909245fad2",
            "region": "ap-south-1",
            "route_table_id": "rtb-095fcc3d4a059ca86",
            "subnet_id": "subnet-0d3e441cbc7599944"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ce1561a510d2bb5",
            "region": "ap-south-1",
            "route_table_id": "rtb-095fcc3d4a059ca86",
            "subnet_id": "subnet-0897b53b987988541"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:subnet/subnet-0cbbda42e101ee70a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbda42e101ee70a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844479805149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-subnet-1",
              "Type": "Private",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:subnet/subnet-09bdc80f586ee652c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bdc80f586ee652c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844479805149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-private-subnet-2",
              "Type": "Private",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:subnet/subnet-0d3e441cbc7599944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3e441cbc7599944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844479805149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-public-subnet-1",
              "Type": "public",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:subnet/subnet-0897b53b987988541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897b53b987988541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844479805149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-public-subnet-2",
              "Type": "public",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            },
            "vpc_id": "vpc-09e0080dde1f2e60d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:844479805149:vpc/vpc-09e0080dde1f2e60d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02c747987267dd09a",
            "default_route_table_id": "rtb-068e3bbf8bd63b38e",
            "default_security_group_id": "sg-04104ff766d7d620b",
            "dhcp_options_id": "dopt-0da0193900ea3b72a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e0080dde1f2e60d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068e3bbf8bd63b38e",
            "owner_id": "844479805149",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Task_1_VPC_INFRASTRUCTURE-dev-vpc",
              "project": "Task_1_VPC_INFRASTRUCTURE"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}